# glxy-gaming-platform

./: .dockerignore  .env.example  .env.production.template  .env.template  .gitignore  .gitignore.docs-security  .gitignore.secrets  AI_BUILDER_BRIEFING.md  API_DOCUMENTATION.md  BRANCH_ANALYSE_ZUSAMMENFASSUNG.md  BRANCH_VALIDATION_REPORT.md  CHANGELOG.md  CLEANUP_REPORT.md  COMPLETE_GAME_ANALYSIS.md  CONSOLIDATION_STRATEGY.md  DATABASE_SETUP_REPORT.md  DELETED_PACKAGES.md  DEVELOPER_HANDOFF.md  DEVOPS-TRANSFORMATION-REPORT.md  Dockerfile  ERWEITERTE_SYSTEM_ANALYSE.md  FINAL_PDF_SETUP.md  FINAL_REPORT.md  FINAL_SMOKE_TESTS.md  FPS_ANALYSIS_INDEX.md  FPS_COMPONENTS_CATEGORIZATION.md  FPS_CONSOLIDATION_ANALYSIS.md  FPS_INTELLIGENTE_ZUSAMMENFÜHRUNG_ANALYSE.md  FPS_PHASE_0_COMPLETE.md  FPS_PHASE_1_COMPLETE.md  FPS_PHASE_1_PROGRESS.md  FPS_PROFESSIONAL_INTEGRATION_MASTERPLAN.md  GAME_CLEANUP_PLAN.md  GAME_ROUTING_UPGRADE_COMPLETE.md  GELÖSCHTE_PAKETE.md  GITMCP_VOLLSTÄNDIGE_ANALYSE.md  GLXY_FPS_COMPREHENSIVE_ANALYSIS.md  GLXY_FPS_EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  (+90 more)
services/web-adobe-api/: .env.example  DATAPAD_API_DOCUMENTATION.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  test_api.sh
services/web-adobe-api/app/: main.py
services/web-adobe-api/app/api/: dependencies.py
services/web-adobe-api/app/core/: config.py  database.py  logging.py
services/web-adobe-api/app/models/: __init__.py  form.py
services/web-adobe-api/examples/: datapad_example.py
services/web-adobe-api/tests/: conftest.py
(+913 files in other folders)
